# AgentDelegationProtocol

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  agents.json  ai_agent.py  api_server.py  auth_server.py  config.py  data_models.py  demo_frontend.py  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt  resource_server.py  run_local.sh  run_servers.py  storage_manager.py  test_api.py  users.json  validate_setup.py
.github/workflows/: espocrm.yml  keycloak.yml  tests.yml
Attack_Simulation/: README.md  attack_simulator.py  mitigation_strategies.md  run_simulation.py  security_report.md  threat_model.md
Attack_Simulation/attack_scenarios/: A1_tls_bypass.py  C1_malicious_agent_registration.py  README.md
examples/: README.md  keycloak_integration.md  langchain_espo_agent.py  okta_integration.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  types.ts
frontend/src/__tests__/: Agents.test.tsx  Dashboard.test.tsx  DelegationCard.test.tsx  DelegationFilters.test.tsx  DelegationsList.test.tsx  Docs.test.tsx  Loading.test.tsx  Navbar.test.tsx  NewAgentForm.test.tsx  Toast.test.tsx  api.test.ts
frontend/src/components/: AgentCard.tsx  AgentModal.tsx  BulkActionsBar.tsx  CreateAgentModal.tsx  DelegationCard.tsx  DelegationDetailModal.tsx  DelegationFilters.tsx  ErrorBoundary.tsx  Loading.tsx  Navbar.tsx  SearchAndFilter.tsx  Toast.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  DelegationsList.tsx  Docs.tsx  NewAgentForm.tsx
frontend/src/services/: api.ts  hooks.ts  index.ts  utils.ts
frontend/tests/e2e/: home.spec.ts
tests/: conftest.py  test_client_registration.py  test_delegation_flow.py  test_frontend.py  test_integration.py  test_performance.py  test_pkce.py  test_revocation.py  test_security.py  test_security_enforcements.py  test_token_issuance.py  test_user_registration.py  utils.py
